software/tradutor.output
Terminals unused in grammar

   PROGRAM
   DOIS_PONTOS
   PONTO
   T_BEGIN
   T_END
   VAR
   ATRIBUICAO
   ASPAS_SIMPLES
   ASPAS_DUPLAS


Grammar

    0 $accept: t_create $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    4 lista_ident: lista_ident VIRGULA add_campo_tabela
    5            | add_campo_tabela

    6 $@3: /* empty */

    7 $@4: /* empty */

    8 $@5: /* empty */

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

   10 $@6: /* empty */

   11 $@7: /* empty */

   12 add_campo_tabela: IDENT $@6 IDENT $@7 restriction_or_not

   13 restriction_or_not: ABRE_PARENTESES NUMERO FECHA_PARENTESES primary_or_not
   14                   | primary_or_not

   15 primary_or_not: AUTOINCREMENTE PRIMARY KEY
   16               | PRIMARY KEY
   17               | /* empty */

   18 $@8: /* empty */

   19 $@9: /* empty */

   20 $@10: /* empty */

   21 $@11: /* empty */

   22 t_alter: ALTER $@8 TABLE $@9 IDENT $@10 PONTO_E_VIRGULA $@11 prox_regra

   23 $@12: /* empty */

   24 $@13: /* empty */

   25 $@14: /* empty */

   26 t_comment: COMMENT ON tipos IDENT $@12 IS $@13 STRING PONTO_E_VIRGULA $@14 prox_regra

   27 tipos: TABLE
   28      | COLUMN
   29      | ROW

   30 prox_regra: t_alter
   31           | t_create
   32           | t_comment
   33           | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258)
ABRE_PARENTESES (259) 3 9 13
FECHA_PARENTESES (260) 3 9 13
VIRGULA (261) 4
PONTO_E_VIRGULA (262) 3 22 26
DOIS_PONTOS (263)
PONTO (264)
T_BEGIN (265)
T_END (266)
VAR (267)
IDENT (268) 3 9 12 22 26
ATRIBUICAO (269)
STRING (270) 26
TABLE (271) 3 22 27
COLUMN (272) 28
ROW (273) 29
CREATE (274) 3
ALTER (275) 22
COMMENT (276) 26
ON (277) 26
IS (278) 26
ASPAS_SIMPLES (279)
ASPAS_DUPLAS (280)
FOREIGN (281) 9
KEY (282) 9 15 16
REFERENCES (283) 9
PRIMARY (284) 15 16
AUTOINCREMENTE (285) 15
NUMERO (286) 13


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
t_create (33)
    on left: 3, on right: 0 31
$@1 (34)
    on left: 1, on right: 3
$@2 (35)
    on left: 2, on right: 3
lista_ident (36)
    on left: 4 5, on right: 3 4
add_campo_tabela (37)
    on left: 9 12, on right: 4 5
$@3 (38)
    on left: 6, on right: 9
$@4 (39)
    on left: 7, on right: 9
$@5 (40)
    on left: 8, on right: 9
$@6 (41)
    on left: 10, on right: 12
$@7 (42)
    on left: 11, on right: 12
restriction_or_not (43)
    on left: 13 14, on right: 12
primary_or_not (44)
    on left: 15 16 17, on right: 13 14
t_alter (45)
    on left: 22, on right: 30
$@8 (46)
    on left: 18, on right: 22
$@9 (47)
    on left: 19, on right: 22
$@10 (48)
    on left: 20, on right: 22
$@11 (49)
    on left: 21, on right: 22
t_comment (50)
    on left: 26, on right: 32
$@12 (51)
    on left: 23, on right: 26
$@13 (52)
    on left: 24, on right: 26
$@14 (53)
    on left: 25, on right: 26
tipos (54)
    on left: 27 28 29, on right: 26
prox_regra (55)
    on left: 30 31 32 33, on right: 3 22 26


state 0

    0 $accept: . t_create $end

    CREATE  shift, and go to state 1

    t_create  go to state 2


state 1

    3 t_create: CREATE . TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    TABLE  shift, and go to state 3


state 2

    0 $accept: t_create . $end

    $end  shift, and go to state 4


state 3

    3 t_create: CREATE TABLE . IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    IDENT  shift, and go to state 5


state 4

    0 $accept: t_create $end .

    $default  accept


state 5

    3 t_create: CREATE TABLE IDENT . $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


state 6

    3 t_create: CREATE TABLE IDENT $@1 . ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    ABRE_PARENTESES  shift, and go to state 7


state 7

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES . lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra

    IDENT    shift, and go to state 8
    FOREIGN  shift, and go to state 9

    lista_ident       go to state 10
    add_campo_tabela  go to state 11


state 8

   12 add_campo_tabela: IDENT . $@6 IDENT $@7 restriction_or_not

    $default  reduce using rule 10 ($@6)

    $@6  go to state 12


state 9

    9 add_campo_tabela: FOREIGN . KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    KEY  shift, and go to state 13


state 10

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident . FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra
    4 lista_ident: lista_ident . VIRGULA add_campo_tabela

    FECHA_PARENTESES  shift, and go to state 14
    VIRGULA           shift, and go to state 15


state 11

    5 lista_ident: add_campo_tabela .

    $default  reduce using rule 5 (lista_ident)


state 12

   12 add_campo_tabela: IDENT $@6 . IDENT $@7 restriction_or_not

    IDENT  shift, and go to state 16


state 13

    9 add_campo_tabela: FOREIGN KEY . ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 17


state 14

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES . PONTO_E_VIRGULA $@2 prox_regra

    PONTO_E_VIRGULA  shift, and go to state 18


state 15

    4 lista_ident: lista_ident VIRGULA . add_campo_tabela

    IDENT    shift, and go to state 8
    FOREIGN  shift, and go to state 9

    add_campo_tabela  go to state 19


state 16

   12 add_campo_tabela: IDENT $@6 IDENT . $@7 restriction_or_not

    $default  reduce using rule 11 ($@7)

    $@7  go to state 20


state 17

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES . IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    IDENT  shift, and go to state 21


state 18

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA . $@2 prox_regra

    $default  reduce using rule 2 ($@2)

    $@2  go to state 22


state 19

    4 lista_ident: lista_ident VIRGULA add_campo_tabela .

    $default  reduce using rule 4 (lista_ident)


state 20

   12 add_campo_tabela: IDENT $@6 IDENT $@7 . restriction_or_not

    ABRE_PARENTESES  shift, and go to state 23
    PRIMARY          shift, and go to state 24
    AUTOINCREMENTE   shift, and go to state 25

    $default  reduce using rule 17 (primary_or_not)

    restriction_or_not  go to state 26
    primary_or_not      go to state 27


state 21

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT . $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    $default  reduce using rule 6 ($@3)

    $@3  go to state 28


state 22

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 . prox_regra

    CREATE   shift, and go to state 1
    ALTER    shift, and go to state 29
    COMMENT  shift, and go to state 30

    $default  reduce using rule 33 (prox_regra)

    t_create    go to state 31
    t_alter     go to state 32
    t_comment   go to state 33
    prox_regra  go to state 34


state 23

   13 restriction_or_not: ABRE_PARENTESES . NUMERO FECHA_PARENTESES primary_or_not

    NUMERO  shift, and go to state 35


state 24

   16 primary_or_not: PRIMARY . KEY

    KEY  shift, and go to state 36


state 25

   15 primary_or_not: AUTOINCREMENTE . PRIMARY KEY

    PRIMARY  shift, and go to state 37


state 26

   12 add_campo_tabela: IDENT $@6 IDENT $@7 restriction_or_not .

    $default  reduce using rule 12 (add_campo_tabela)


state 27

   14 restriction_or_not: primary_or_not .

    $default  reduce using rule 14 (restriction_or_not)


state 28

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 . FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 38


state 29

   22 t_alter: ALTER . $@8 TABLE $@9 IDENT $@10 PONTO_E_VIRGULA $@11 prox_regra

    $default  reduce using rule 18 ($@8)

    $@8  go to state 39


state 30

   26 t_comment: COMMENT . ON tipos IDENT $@12 IS $@13 STRING PONTO_E_VIRGULA $@14 prox_regra

    ON  shift, and go to state 40


state 31

   31 prox_regra: t_create .

    $default  reduce using rule 31 (prox_regra)


state 32

   30 prox_regra: t_alter .

    $default  reduce using rule 30 (prox_regra)


state 33

   32 prox_regra: t_comment .

    $default  reduce using rule 32 (prox_regra)


state 34

    3 t_create: CREATE TABLE IDENT $@1 ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 prox_regra .

    $default  reduce using rule 3 (t_create)


state 35

   13 restriction_or_not: ABRE_PARENTESES NUMERO . FECHA_PARENTESES primary_or_not

    FECHA_PARENTESES  shift, and go to state 41


state 36

   16 primary_or_not: PRIMARY KEY .

    $default  reduce using rule 16 (primary_or_not)


state 37

   15 primary_or_not: AUTOINCREMENTE PRIMARY . KEY

    KEY  shift, and go to state 42


state 38

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES . REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    REFERENCES  shift, and go to state 43


state 39

   22 t_alter: ALTER $@8 . TABLE $@9 IDENT $@10 PONTO_E_VIRGULA $@11 prox_regra

    TABLE  shift, and go to state 44


state 40

   26 t_comment: COMMENT ON . tipos IDENT $@12 IS $@13 STRING PONTO_E_VIRGULA $@14 prox_regra

    TABLE   shift, and go to state 45
    COLUMN  shift, and go to state 46
    ROW     shift, and go to state 47

    tipos  go to state 48


state 41

   13 restriction_or_not: ABRE_PARENTESES NUMERO FECHA_PARENTESES . primary_or_not

    PRIMARY         shift, and go to state 24
    AUTOINCREMENTE  shift, and go to state 25

    $default  reduce using rule 17 (primary_or_not)

    primary_or_not  go to state 49


state 42

   15 primary_or_not: AUTOINCREMENTE PRIMARY KEY .

    $default  reduce using rule 15 (primary_or_not)


state 43

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES . IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    IDENT  shift, and go to state 50


state 44

   22 t_alter: ALTER $@8 TABLE . $@9 IDENT $@10 PONTO_E_VIRGULA $@11 prox_regra

    $default  reduce using rule 19 ($@9)

    $@9  go to state 51


state 45

   27 tipos: TABLE .

    $default  reduce using rule 27 (tipos)


state 46

   28 tipos: COLUMN .

    $default  reduce using rule 28 (tipos)


state 47

   29 tipos: ROW .

    $default  reduce using rule 29 (tipos)


state 48

   26 t_comment: COMMENT ON tipos . IDENT $@12 IS $@13 STRING PONTO_E_VIRGULA $@14 prox_regra

    IDENT  shift, and go to state 52


state 49

   13 restriction_or_not: ABRE_PARENTESES NUMERO FECHA_PARENTESES primary_or_not .

    $default  reduce using rule 13 (restriction_or_not)


state 50

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT . $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    $default  reduce using rule 7 ($@4)

    $@4  go to state 53


state 51

   22 t_alter: ALTER $@8 TABLE $@9 . IDENT $@10 PONTO_E_VIRGULA $@11 prox_regra

    IDENT  shift, and go to state 54


state 52

   26 t_comment: COMMENT ON tipos IDENT . $@12 IS $@13 STRING PONTO_E_VIRGULA $@14 prox_regra

    $default  reduce using rule 23 ($@12)

    $@12  go to state 55


state 53

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 . ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 56


state 54

   22 t_alter: ALTER $@8 TABLE $@9 IDENT . $@10 PONTO_E_VIRGULA $@11 prox_regra

    $default  reduce using rule 20 ($@10)

    $@10  go to state 57


state 55

   26 t_comment: COMMENT ON tipos IDENT $@12 . IS $@13 STRING PONTO_E_VIRGULA $@14 prox_regra

    IS  shift, and go to state 58


state 56

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES . IDENT $@5 FECHA_PARENTESES

    IDENT  shift, and go to state 59


state 57

   22 t_alter: ALTER $@8 TABLE $@9 IDENT $@10 . PONTO_E_VIRGULA $@11 prox_regra

    PONTO_E_VIRGULA  shift, and go to state 60


state 58

   26 t_comment: COMMENT ON tipos IDENT $@12 IS . $@13 STRING PONTO_E_VIRGULA $@14 prox_regra

    $default  reduce using rule 24 ($@13)

    $@13  go to state 61


state 59

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT . $@5 FECHA_PARENTESES

    $default  reduce using rule 8 ($@5)

    $@5  go to state 62


state 60

   22 t_alter: ALTER $@8 TABLE $@9 IDENT $@10 PONTO_E_VIRGULA . $@11 prox_regra

    $default  reduce using rule 21 ($@11)

    $@11  go to state 63


state 61

   26 t_comment: COMMENT ON tipos IDENT $@12 IS $@13 . STRING PONTO_E_VIRGULA $@14 prox_regra

    STRING  shift, and go to state 64


state 62

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 65


state 63

   22 t_alter: ALTER $@8 TABLE $@9 IDENT $@10 PONTO_E_VIRGULA $@11 . prox_regra

    CREATE   shift, and go to state 1
    ALTER    shift, and go to state 29
    COMMENT  shift, and go to state 30

    $default  reduce using rule 33 (prox_regra)

    t_create    go to state 31
    t_alter     go to state 32
    t_comment   go to state 33
    prox_regra  go to state 66


state 64

   26 t_comment: COMMENT ON tipos IDENT $@12 IS $@13 STRING . PONTO_E_VIRGULA $@14 prox_regra

    PONTO_E_VIRGULA  shift, and go to state 67


state 65

    9 add_campo_tabela: FOREIGN KEY ABRE_PARENTESES IDENT $@3 FECHA_PARENTESES REFERENCES IDENT $@4 ABRE_PARENTESES IDENT $@5 FECHA_PARENTESES .

    $default  reduce using rule 9 (add_campo_tabela)


state 66

   22 t_alter: ALTER $@8 TABLE $@9 IDENT $@10 PONTO_E_VIRGULA $@11 prox_regra .

    $default  reduce using rule 22 (t_alter)


state 67

   26 t_comment: COMMENT ON tipos IDENT $@12 IS $@13 STRING PONTO_E_VIRGULA . $@14 prox_regra

    $default  reduce using rule 25 ($@14)

    $@14  go to state 68


state 68

   26 t_comment: COMMENT ON tipos IDENT $@12 IS $@13 STRING PONTO_E_VIRGULA $@14 . prox_regra

    CREATE   shift, and go to state 1
    ALTER    shift, and go to state 29
    COMMENT  shift, and go to state 30

    $default  reduce using rule 33 (prox_regra)

    t_create    go to state 31
    t_alter     go to state 32
    t_comment   go to state 33
    prox_regra  go to state 69


state 69

   26 t_comment: COMMENT ON tipos IDENT $@12 IS $@13 STRING PONTO_E_VIRGULA $@14 prox_regra .

    $default  reduce using rule 26 (t_comment)
